force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/nFORCE__Data_Snapshot_Archive__b.object-meta.xml
<CustomObject>
    <description>This big object stores historical field values and metadata related to the sObjects in a snapshot.</description>
    <label>Snapshot Archive</label>
    <pluralLabel>Snapshot Archive</pluralLabel>
</CustomObject>