force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/fields/nFORCE__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_API_Name__c</fullName>
    <description>The system automatically populates this field with the field API name captured in the snapshot.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>