force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/fields/nFORCE__Field_Details__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Details__c</fullName>
    <description>The system automatically populates this field with the field details of the field captured in the snapshot.</description>
    <label>Field Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>