force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/fields/nFORCE__Field_Order__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Order__c</fullName>
    <description>The system automatically populates this required field with the field order based on the respective context of the snapshot objects field set.</description>
    <label>Field Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>