force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/fields/nFORCE__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Value__c</fullName>
    <description>The system automatically populates this field with the value of the field captured in the snapshot.</description>
    <label>Field Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>