force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/fields/nFORCE__Is_Related__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Related__c</fullName>
    <description>The system automatically populates this required number field with 0 or 1 based on the field types the system snapshots. By default, the field value is 0. If the system snapshots a related field, the system populates the field with 1.</description>
    <label>Is Related</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>