force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/fields/nFORCE__Numeric_Index__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Numeric_Index__c</fullName>
    <description>This field is required and is used as a numeric index placeholder.</description>
    <label>Numeric Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>