force-app/main/default/objects/nFORCE__Data_Snapshot_Archive__b/fields/nFORCE__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Object_Type__c</fullName>
    <description>The system automatically populates this field with the context object type.</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>